// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse config ensure parsing integrity overwrite:false/ 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-default/template",
  "templateName": "default",
  "templateTopLevelDir": "../../packages/cgp-template-default",
}
`;

exports[`parse config ensure parsing integrity overwrite:false//template:react/ 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-react/template",
  "templateName": "react",
  "templateTopLevelDir": "../../packages/cgp-template-react",
}
`;

exports[`parse config ensure parsing integrity overwrite:false//template:react-ts/ 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-react-ts/template",
  "templateName": "react-ts",
  "templateTopLevelDir": "../../packages/cgp-template-react-ts",
}
`;

exports[`parse config ensure parsing integrity overwrite:false//template:typescript/ 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-typescript/template",
  "templateName": "typescript",
  "templateTopLevelDir": "../../packages/cgp-template-typescript",
}
`;

exports[`parse config ensure parsing integrity overwrite:true/ 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-default/template",
  "templateName": "default",
  "templateTopLevelDir": "../../packages/cgp-template-default",
}
`;

exports[`parse config ensure parsing integrity overwrite:true//template:react/ 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-react/template",
  "templateName": "react",
  "templateTopLevelDir": "../../packages/cgp-template-react",
}
`;

exports[`parse config ensure parsing integrity overwrite:true//template:react-ts/ 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-react-ts/template",
  "templateName": "react-ts",
  "templateTopLevelDir": "../../packages/cgp-template-react-ts",
}
`;

exports[`parse config ensure parsing integrity overwrite:true//template:typescript/ 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-typescript/template",
  "templateName": "typescript",
  "templateTopLevelDir": "../../packages/cgp-template-typescript",
}
`;

exports[`parse config ensure parsing integrity template:react/ 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-react/template",
  "templateName": "react",
  "templateTopLevelDir": "../../packages/cgp-template-react",
}
`;

exports[`parse config ensure parsing integrity template:react-ts/ 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-react-ts/template",
  "templateName": "react-ts",
  "templateTopLevelDir": "../../packages/cgp-template-react-ts",
}
`;

exports[`parse config ensure parsing integrity template:typescript/ 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-typescript/template",
  "templateName": "typescript",
  "templateTopLevelDir": "../../packages/cgp-template-typescript",
}
`;

exports[`parse config ensure parsing integrity vanilla 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../packages/cgp-template-default/template",
  "templateName": "default",
  "templateTopLevelDir": "../../packages/cgp-template-default",
}
`;
